# PPD

Graph_Coloring_CUDA/: CMakeLists.txt  GraphColoring_CUDA.cu
Graph_Coloring_OpenCL/: CMakeLists.txt  Graph_Coloring_OpenCL.c
Lab 1 - Non-cooperative multithreading/: sales.txt
Lab 1 - Non-cooperative multithreading/src/: Bill.java  Main.java  Product.java
Lab 2 - Producer-consumer synchronization/: pom.xml
Lab 3 - Simple parallel tasks/: pom.xml
Lab 4 - Futures and continuations/Lab 4/: Lab 4.sln
Lab 4 - Futures and continuations/Lab 4/Lab 4/: AsyncTaskExecution.cs  CallBackExecution.cs  Content.cs  Lab 4.csproj  Program.cs  TaskExecution.cs  Util.cs
Lab 4 - Futures and continuations/Laboratory4/: Laboratory4.csproj  Laboratory4.sln  Program.cs
Lab 4 - Futures and continuations/Laboratory4/Models/: Message.cs
Lab 4 - Futures and continuations/Laboratory4/Responses/: google.com_1682800145.txt  google.com_723645966.txt  www.cs.ubbcluj.ro_2101069269.txt  www.cs.ubbcluj.ro_467466134.txt  www.trinitas.tv_130316759.txt  www.trinitas.tv_171454209.txt
Lab 4 - Futures and continuations/Laboratory4/Service/: AsyncTaskCallback.cs  SerialCallback.cs  TaskCallback.cs
Lab 4 - Futures and continuations/Laboratory4/Utils/: ExecutionType.cs  ProgramConstants.cs  (+1 more)
Lab 5 - Parallelizing techniques/: pom.xml
Lab 6 - Parallelizing techniques 2 - Parallel explore/: pom.xml
Lab 7 - MPI programming/: pom.xml
Lab 7 - MPI programming/lib/: PLACE_MPJ_JAR_HERE.txt
Lab 8 - Distributed protocols/: pom.xml
Lab 8 - Distributed protocols/lib/: PLACE_MPJ_JAR_HERE.txt
(+15 files in other folders)
